Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.4.0, Qt Creator 3.4.1
-
None
Description
When opening a project and no sysroot is mounted for the selected Kit a message appears
Could not find qmake configuration file devices/linux-rasp-pi-g++.
Error while parsing file /home/user/some/where/project.pro. Giving up.
Also the project tree is empty leading to a useless project with no hints to solve the issue.
Expected:
A message to say how to fix it, where to look for it, or at least a full usable tree but an unconfigured project.