KitInformation: Improve feedback on wrong SysRoots

Give specific warnings when the sysroot is set and
 * does not exist
 * is not a directory
 * is an empty directory

Task-number: QTCREATORBUG-16079
Change-Id: I3e7a2393e361719e75e33d7085eb1fd62c148f4d
Reviewed-by: Vikas Pachdha <vikas.pachdha@theqtcompany.com>
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>